@@ -8,18 +8,17 @@ import org.json.XML;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import javax.net.ssl.HttpsURLConnection;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping("/api/v1/jobaba")
@@ -37,17 +36,20 @@ public class JobabaApiController {
 
     // 전체조회
     @GetMapping("/jobinfo")
-    public String jobabainfo() throws IOException {
+    public ResponseEntity<String> jobabainfo(@RequestParam(value = "param", required = false) String param) throws IOException {
+        if (param == null || param.isEmpty()) {
+            return ResponseEntity.badRequest().body("Invalid input: param is required."); // 테스트 코드를 위해 넣었음. 한글로하면 에러나서 영어로함.
+        }
+
         // API 호출을 위한 URL 빌더
         StringBuilder urlBuilder = new StringBuilder("https://openapi.gg.go.kr/GGJOBABARECRUSTM?");
-        urlBuilder.append("KEY=").append(URLEncoder.encode(apiKey, "UTF-8")); // API 키 추가
-        urlBuilder.append("&TYPE=").append(URLEncoder.encode("xml", "UTF-8")); // 요청 타입 추가
-        urlBuilder.append("&pIndex=").append(URLEncoder.encode("1", "UTF-8")); // 페이지 인덱스 추가
-        urlBuilder.append("&pSize=").append(URLEncoder.encode("100", "UTF-8")); // 페이지 사이즈 추가
+        urlBuilder.append("KEY=").append(URLEncoder.encode(apiKey, StandardCharsets.UTF_8)); // API 키 추가
+        urlBuilder.append("&TYPE=").append(URLEncoder.encode("xml", StandardCharsets.UTF_8)); // 요청 타입 추가
+        urlBuilder.append("&pIndex=").append(URLEncoder.encode("1", StandardCharsets.UTF_8)); // 페이지 인덱스 추가
+        urlBuilder.append("&pSize=").append(URLEncoder.encode("100", StandardCharsets.UTF_8)); // 페이지 사이즈 추가
 
         // URL 객체 생성
         URL url = new URL(urlBuilder.toString());
-//        HttpsURLConnection conn = (HttpsURLConnection) url.openConnection(); // HTTPS 연결 생성
         HttpURLConnection conn = (HttpURLConnection) url.openConnection(); // HTTP 연결 생성
         conn.setRequestMethod("GET"); // GET 요청 방식 설정
 
@@ -74,12 +76,12 @@ public class JobabaApiController {
         // JSON 데이터 파싱하여 DTO 리스트로 변환
         JSONObject jsonObject = new JSONObject(jsonData); // JSON 객체 생성
         JSONArray jsonArray = jsonObject.getJSONObject("GGJOBABARECRUSTM").getJSONArray("row"); // "row" 배열 추출
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd"); // 날짜 포맷터 설정
 
         // 각 job 정보를 DTO로 변환하여 저장
         for (int i = 0; i < jsonArray.length(); i++) {
             JSONObject jobJson = jsonArray.getJSONObject(i); // 배열에서 각 job JSON 객체 추출
             JobTotalDTO jobDTO = new JobTotalDTO(); // JobTotalDTO 객체 생성
+
             jobDTO.setCompanyName(jobJson.optString("ENTRPRS_NM", "")); // 회사명 설정
             jobDTO.setInfoTitle(jobJson.optString("PBANC_CONT", "")); // 정보 제목 설정
             jobDTO.setWageType(jobJson.optString("PBANC_FORM_DIV", "")); // 임금 형태 설정
@@ -87,19 +89,6 @@ public class JobabaApiController {
             jobDTO.setLocation(jobJson.optString("WORK_REGION_CONT", "")); // 근무 지역 설정
             jobDTO.setEmploymentType(jobJson.optString("PBANC_FORM_DIV", "")); // 고용 형태 설정
             jobDTO.setCareerCondition(jobJson.optString("CAREER_DIV", "")); // 경력 조건 설정
-
-            // 날짜 변환 처리 오류 발생해서 주석트로 해뒀음.
-            /*
-            String postedDateStr = jobJson.optString("RCPT_BGNG_DE", ""); // 게시 날짜 문자열
-            String closingDateStr = jobJson.optString("RCPT_END_DE", ""); // 마감 날짜 문자열
-            if (!postedDateStr.isEmpty()) {
-                jobDTO.setPostedDate(LocalDate.parse(postedDateStr, formatter)); // 날짜 변환
-            }
-            if (!closingDateStr.isEmpty()) {
-                jobDTO.setClosingDate(LocalDate.parse(closingDateStr, formatter)); // 날짜 변환
-            }
-            */
-
             jobDTO.setWebInfoUrl(jobJson.optString("URL", "")); // 웹 정보 URL 설정
             jobDTO.setWorkRegionCdCont(jobJson.optInt("WORK_REGION_CD_CONT", 0)); // 근무 지역 코드 설정
             jobDTO.setRecrutFieldCdNm(jobJson.optInt("RECRUT_FIELD_CD_NM", 0)); // 채용 분야 코드 설정
@@ -108,10 +97,8 @@ public class JobabaApiController {
 
             jobabaService.saveJob(jobDTO); // DTO를 서비스에 저장
         }
-
-        return jsonData; // JSON 데이터 반환
+        return ResponseEntity.ok(jsonData); // JSON 데이터 반환
     }
-
 
     // 상세조회
     @GetMapping("/jobinfo/{Id}")
@@ -119,19 +106,18 @@ public class JobabaApiController {
         // API 호출을 위한 URL 빌더 생성
         StringBuilder urlBuilder = new StringBuilder("https://openapi.gg.go.kr/GGJOBABARECRUSTM?");
         // API 키를 URL에 추가
-        urlBuilder.append("KEY=").append(URLEncoder.encode(apiKey, "UTF-8"));
+        urlBuilder.append("KEY=").append(URLEncoder.encode(apiKey, StandardCharsets.UTF_8));
         // 응답 타입을 XML로 설정
-        urlBuilder.append("&TYPE=").append(URLEncoder.encode("xml", "UTF-8"));
+        urlBuilder.append("&TYPE=").append(URLEncoder.encode("xml", StandardCharsets.UTF_8));
         // 페이지 인덱스를 1로 설정
-        urlBuilder.append("&pIndex=").append(URLEncoder.encode("1", "UTF-8"));
+        urlBuilder.append("&pIndex=").append(URLEncoder.encode("1", StandardCharsets.UTF_8));
         // 페이지 사이즈를 100으로 설정
-        urlBuilder.append("&pSize=").append(URLEncoder.encode("100", "UTF-8"));
+        urlBuilder.append("&pSize=").append(URLEncoder.encode("100", StandardCharsets.UTF_8));
 
         // 완성된 URL로 URL 객체 생성
         URL url = new URL(urlBuilder.toString());
         // HTTP 연결 생성
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-//        HttpsURLConnection conn = (HttpsURLConnection) url.openConnection(); // https 연결 생성
         conn.setRequestMethod("GET"); // GET 방식으로 요청 설정
         conn.setRequestProperty("Content-type", "application/xml"); // 요청 헤더에 Content-type 설정
 
@@ -166,19 +152,19 @@ public class JobabaApiController {
             JSONObject jobJson = jsonArray.getJSONObject(i); // 현재 JSON 객체
             // 현재 JSON 객체의 "ENTRPRS_NM" 값이 jobId와 일치하는지 확인
             if (jobJson.getString("ENTRPRS_NM").equals(jobId)) {
-                // 해당 jobId에 맞는 데이터 반환 (예쁘게 출력, 4칸 들여쓰기)
-                return ResponseEntity.ok(jobJson.toString(4));
+                // 해당 jobId에 맞는 데이터가 발견된 경우 JSON 객체를 반환
+                return ResponseEntity.ok(jobJson.toString());
             }
         }
 
-        // 해당 jobId가 없을 경우의 처리
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("해당 채용정보의 ID값을 찾을 수 없습니다."); // 404 상태 코드와 함께 오류 메시지 반환
+        // jobId에 맞는 데이터가 없는 경우 404 에러 반환
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Job not found for id: " + jobId);
     }
 
-    // XML 데이터를 JSON 객체로 변환하는 메서드
+    // XML을 JSON으로 변환하는 메서드
     private String convertXmlToJson(String xmlData) {
-        // XML 데이터를 JSON 객체로 변환
-        JSONObject json = XML.toJSONObject(xmlData);
-        return json.toString(4); // 포맷팅된 JSON 문자열 반환
+        JSONObject jsonObject = XML.toJSONObject(xmlData); // XML 데이터를 JSON으로 변환
+        return jsonObject.toString(); // 변환된 JSON 문자열 반환
     }
 }
+
